--- a/assets/css/mediaquery.css
+++ b/assets/css/mediaquery.css
@@ -14,7 +14,30 @@
         padding: 5px;
     }
 }
+@media screen and (max-width:1440px){
+    .fab{
+        font-size: 1.7rem;
+        margin: 50px 30px;
+       }
+       .menu .item{
+           font-size: 1.3rem;
+       }
+}
+@media screen and (max-width:1160px){
+    .menu .item{
+        font-size: 1.3rem;
+    }
+    .fab{
+        font-size: 1.7rem;
+        margin: 50px 10px;
+       }
+}
 @media screen and (max-width:968px){
+    .fab{
+        font-size: 1.8rem;
+        margin: 30px;
+       }
+
    .ham{
       display: block;
        cursor: pointer;
@@ -34,7 +57,7 @@
        text-align: center;
        width: 100%;
        margin: 0;
-       font-size: 1.5rem;
+       font-size: 1.4rem;
    }
    #toggle:checked + .menu{
        display: block;
